--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <div class="nav1">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Doctors</a></li>
+                    <li><a href="#ourdoctors">Doctors</a></li>
                     <li><a href="#">News</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -63,7 +63,7 @@
         <div class="ourdoctor" >
             <h1>Our Doctors</h1>
         </div>
-        <div class="ourdoctors">
+        <div class="ourdoctors" id="ourdoctors">
             <div class="doctor1">
                 <div class="dp1">
                     <img src="dp1.png" alt="dp1" width="300px">
@@ -113,7 +113,7 @@
                         <img src="dp4.png" alt="dp4" width="300px">
                     </div>
                     <div class="n4">Decemeber&nbsp;10,&nbsp;2025<br>
-                        <b style="font-size: 30px;"> About amazing <br>techonlogy</b>
+                        <b style="font-size: 20px;"> About amazing <br>techonlogy</b>
                         <br>
                         Here are the latest updates on the<br> advancements in medical technology...
                         <hr>
@@ -122,7 +122,8 @@
                         <div class="lg1">
                             <img src="dp1.png" alt="dp1" width="50px" height="50px" style="border-radius: 50%;">
                         </div>
-                        <div class="lgc1"><b style="font-size: 30px;">Tiger sroff</b><br>CEO/FOUNDER</div>
+                        <div class="lgc1">
+                            <b style="font-size: 20px;">Tiger sroff</b><br>CEO/FOUNDER</div>
                     </div>
                 </div>
                 <div class="new1">
@@ -130,7 +131,7 @@
                         <img src="dp4.png" alt="dp4" width="300px">
                     </div>
                     <div class="n4">Octomber&nbsp;19,&nbsp;2025<br>
-                        <b style="font-size: 30px;"> About amazing <br>techonlogy</b>
+                        <b style="font-size: 20px;"> About amazing <br>techonlogy</b>
                         <br>
                         Here are the latest updates on the<br> advancements in medical technology...
                         <hr>
@@ -139,7 +140,7 @@
                         <div class="lg1">
                             <img src="dp1.png" alt="dp1" width="50px" height="50px" style="border-radius: 50%;">
                         </div>
-                        <div class="lgc1"><b style="font-size: 30px;">Tiger sroff</b><br>CEO/FOUNDER</div>
+                        <div class="lgc1"><b style="font-size: 20px;">Tiger sroff</b><br>CEO/FOUNDER</div>
                     </div>
                 </div>
                 <div class="new1">
@@ -147,16 +148,17 @@
                         <img src="dp4.png" alt="dp4" width="300px">
                     </div>
                     <div class="n4">Decemeber&nbsp;10,&nbsp;2025<br>
-                        <b style="font-size: 30px;"> About amazing <br>techonlogy</b>
-                        <br>
-                        Here are the latest updates on the<br> advancements in medical technology...
+                        <b style="font-size: 20px;"> About amazing <br>techonlogy</b>
+                       <div class="pera" style="margin-top: 10px;">
+                       <p> Here are the latest updates on the<br> advancements in medical technology...</p>
+                       </div>
                         <hr>
-                    </div>
+                   
                     <div class="c4">
                         <div class="lg1">
                             <img src="dp1.png" alt="dp1" width="50px" height="50px" style="border-radius: 50%;">
                         </div>
-                        <div class="lgc1"><b style="font-size: 30px;">Tiger sroff</b><br>CEO/FOUNDER</div>
+                        <div class="lgc1"><b style="font-size: 20px;">Tiger sroff</b><br>CEO/FOUNDER</div>
                     </div>
                 </div>
 
@@ -165,28 +167,29 @@
         </div>
         <div class="makeappointment">
             <div class="dp5">
-                <img src="dp5.png" alt="dp5" width="700px" height="600px">
+                <img src="dp5.png" alt="dp5" width="400px" height="400px">
             </div>
+            <div class="formmain">
             <div class="appointment">
                 <div class="title"><b style="font-size: 40px;">Make appointment</b></div>
                 <div class="form">
                     <div class="form-group">
-                        <label>Name</label>
+                        <label>Name</label><br>
                         <input type="text" placeholder="Enter your name">
                     </div>
                     <div class="form-group">
-                        <label>Email</label>
+                        <label>Email</label><br>
                         <input type="Email" placeholder="Enter your email">
                     </div>
 
                 </div>
                 <div class="form">
                     <div class="form-group">
-                        <label>select date</label>
+                        <label>select date</label><br>
                         <input type="date" placeholder="Enter your name">
                     </div>
                     <div class="form-group">
-                        <label>Select department</label>
+                        <label>Select department</label><br>
                         <select>
                             <option>Select</option>
                             <option>Cardiology</option>
@@ -200,8 +203,8 @@
                 </div>
                 <div class="form">
                     <div class="form-group1">
-                        <label>phone</label>
-                        <input type="tel" placeholder="Enter your number"  width="100%" >
+                        <label>phone</label><br>
+                        <input type="tel" placeholder="Enter your number" >
                     </div>
 
 
@@ -224,6 +227,7 @@
 
 
                 </div>
+            </div>
             </div>
         </div>
 
@@ -261,10 +265,12 @@
                     </div>
                 </div>
             </div>
-            <div class="openinginfo"><p><b style="font-size: 30px;">opening info</b><br><br><br><br><br>
-            Monaday&nbsp;-&nbsp;Friday&nbsp;&nbsp;08:00&nbsp;AM&nbsp;-&nbsp;10:00&nbsp;PM<br>
+            <div class="openinginfo">
+            <b style="font-size: 30px;">opening info</b>
+            <p>Monaday&nbsp;-&nbsp;Friday&nbsp;&nbsp;08:00&nbsp;AM&nbsp;-&nbsp;10:00&nbsp;PM<br>
         Saturday&nbsp;&nbsp;08:00&nbsp;AM&nbsp;-&nbsp;10:00&nbsp;PM<br>
-    Sunday&nbsp;&nbsp;&nbsp;Closed</p></div>
+    Sunday&nbsp;&nbsp;&nbsp;Closed</p>
+        </div>
         </div><hr>
         <div class="footer">
             <div class="r">copyright&nbsp;&copy;&nbsp;2025&nbsp;Your Company | Design:kevin shah</div>
